2007-08-10  Nick Clifton  <nickc@redhat.com>

	* po/fi.po: Updated Finish translation.
	* po/vi.po: Updated Vietnamese translation.

2007-08-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* po/POTFILES.in: Regenerate.

2007-08-04  Alan Modra  <amodra@bigpond.net.au>

	PR 4888
	* objcopy.c (setup_section): Do modify section flags for ELF
	STRIP_NONDEBUG (reverting part of 2007-05-30 change).  Prevent
	header rewrite by twiddling input section flags instead.
	Simplify code setting SHT_NOBITS.

2007-07-28  Christopher Faylor  <me+binutils@cgf.cx>

	* MAINTAINERS: Update my email address.

2007-07-26  Adam Nemet  <anemet@caviumnetworks.com>

	* readelf.c (process_archive): Also skip Irix6-style archive symbol
	tables.

2007-07-24  Nick Clifton  <nickc@redhat.com>

	* readelf.c (NUM_ELEM): Remove redundant macro; replace references
	to it with references to ARRAY_SIZE.
	Add support for CR16.
	Fix formatting.

2007-07-19  Nick Clifton  <nickc@redhat.com>

	PR binutils/4802
	* srconv.c (strip_suffix): Add const qualifier to argument.

2007-07-16  Nick Clifton  <nickc@redhat.com>

	* po/uk.po: New Ukrainian translation.
	* configure.in (ALL_LINGUAS): Add 'uk'.
	* configure: Regenerate.

2007-07-10  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c (dump_dwarf): Correct setting of is_relocatable.

2007-07-09  Roland McGrath  <roland@redhat.com>

	* readelf.c (get_gnu_elf_note_type): New function.
	(process_note): Use it for "GNU" name.

2007-07-08  Andreas Schwab  <schwab@suse.de>

	* Makefile.am (HFILES): Add dwarf.h, sysdep.h and unwind-ia64.h.
	(CFILES): Add unwind-ia64.c.
	Regenerate dependencies.
	* Makefile.in: Regenerate.

2007-07-05  Nick Clifton  <nickc@redhat.com>

	* addr2line.c: Update copyright notice to refer to GPLv3.
	* ar.c, arlex.l, arparse.y, arsup.c, arsup.h, bin2c.c, binemul.c,
	binemul.h, bucomm.c, bucomm.h, budbg.h, coffdump.c, coffgrok.c,
	coffgrok.h, cxxfilt.c, debug.c, debug.h, deflex.l, defparse.y,