@@ -65,8 +65,8 @@ info_TEXINFOS = gprof.texi
 gprof_TEXINFOS = config.texi
 man_MANS = gprof.1
 
-AM_MAKEINFOFLAGS = -I "$(srcdir)" -I ../bfd/doc
-TEXI2DVI = texi2dvi -I "$(srcdir)" -I ../bfd/doc
+AM_MAKEINFOFLAGS = -I "$(srcdir)" -I "$(top_srcdir)/../bfd/doc" -I ../bfd/doc
+TEXI2DVI = texi2dvi -I "$(srcdir)" -I "$(top_srcdir)/../bfd/doc" -I ../bfd/doc
 
 config.texi:
 	echo "@set top_srcdir $(top_srcdir)" >> ./config.texi
