@@ -1,3 +1,9 @@
+2007-08-12  Matthias Klose  <doko@ubuntu.com>
+
+	* doc/Makefile.am (AM_MAKEINFOFLAGS, TEXI2DVI): Include
+	$(top_srcdir)/../../bfd/doc.
+	* doc/Makefile.in: Regenerate.
+
 2007-08-10  Nick Clifton  <nickc@redhat.com>
 
 	* NEWS: Add a marker for the 2.18 features.
