@@ -1,3 +1,9 @@
+2007-08-12  Matthias Klose  <doko@ubuntu.com>
+
+	* Makefile.am (AM_MAKEINFOFLAGS, TEXI2DVI): Include
+	$(top_srcdir)/../../bfd/doc.
+	* Makefile.in: Regenerate.
+
 2007-08-12  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* configure.in (ALL_LINGUAS): Add fi.
